# documentacion

./: .markdownlint.json  404.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
00-ejecutar-programa/: index.html
11-lista-de-funciones/: index.html
ajuste-coordenadas/: index.html
anclajes/compresion/: index.html
anclajes/compresion_axial/: index.html
anclajes/datos_iniciales/: index.html
anclajes/ingreso_xlsx/: index.html
anclajes/introduccion/: index.html
anclajes/large_moment_cax/: index.html
anclajes/large_moment_tra/: index.html
anclajes/large_moments/: index.html
anclajes/resultados_iniciales/: index.html
anclajes/small_moment_cax/: index.html
anclajes/small_moment_tra/: index.html
anclajes/small_moments/: index.html
anclajes/traccion/: index.html
anclajes/versiones/: index.html
comandos-autocad/: index.html
configuracion/: index.html
curva3d/: index.html
curvaw/introduccion/: index.html
curvaw/versiones/: index.html
desarrollador/: index.html
directorios/: index.html
docs/: 00-ejecutar-programa.md  11-lista-de-funciones.md  comandos-autocad.md  configuracion.md  desarrollador.md  directorios.md  dxftoedb1.md  dxftoedb2.md  dxftoedb3.md  dxftoedb4.md  index.md  instalacion.md  preparacion.md  problemas.md
docs/anclajes/: compresion.md  (+13 more)
dxftoedb1/: index.html
dxftoedb2/: index.html
dxftoedb3/: index.html
dxftoedb4/: index.html
etabs_sdk/: index.html
ideas/: index.html
instalacion/: index.html
preparacion/: index.html
problemas/: index.html
search/: search_index.json
(+69 files in other folders)
